# RomeSocket

./: .gitignore  CMakeLists.txt  README.md  TODO  dockerfile
build-win32/: CMakeLists.txt
doc/: RomeSocket.md  TODO  doc_template.html
doc/references/: basic.html  io_uring++.html
example/: benchmark.txt  benchmark_client.cpp  benchmark_server.cpp  echo_client.c  echo_client.cpp  echo_server.cpp  echo_toy.cpp  key_exchange.c  random_client.cpp  random_server.cpp  receive_client.cpp  receive_server.cpp  ssl_client  ssl_client.cpp  ssl_server.cpp  thread_pool_test_1.cpp
include/: RomeSocket.h  client.h  exception.hpp  layer.h  memory_pool.hpp  romesocket.cpp  romesocket.hpp  thread_pool.hpp  zerohttp  zerohttp.c
old/: echo.c  romesocket copy.cpp  romesocket copy.hpp
old/example/: ssl_client.cpp  ssl_server.cpp
old/include/: Error.h  RomeSocket.h  RomeSocketOld.h  RomeSocketServer.h
old/source/: RomeSocket.cpp  RomeSocketOld.cpp  RomeSocketServer.cpp
old/test/: test.cpp
source/: RomeSocket.cpp  cert.pem  client.c  key.pem  layer.c  memory_pool.cpp  romesocket.cpp  romesocket_client.c  test  test.cpp  test_client  test_client.cpp  thread_pool.cpp
test/: echo.c  echo_client.c  layer_test.cpp  thread_pool_test_1.cpp
